# doctor-zebra

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  ONBOARDING.md  README.md  app.py  build_desktop.spec  build_linux.spec  config.py  desktop.py  desktop_browser.py  label.zpl  network.json  pyproject.toml  requirements-mssql-odbc.txt  requirements-mssql-pure.txt  requirements.txt  update.json  zpl_mode.zpl
.github/workflows/: build-linux.yml  build-windows.yml  screenshots.yml
data/: cache.db
data/profiles/: ejemplo.json
data/zpl_templates/: etiqueta_producto.zpl
i18n/: ca.json  en.json  es.json
modules/: cache.py  printer.py  profiles.py  zpl_templates.py
packaging/: comandante-zebra.desktop  comandante-zebra.sh  nfpm.yaml
scripts/: build_icon.py  take_screenshots.py
seed_profiles/default/: config.cfg
seed_profiles/default/templates_zpl/: ETIQUETA_GRANDE.zpl  ETIQUETA_MEDIANA_MANGOS.zpl  ETIQUETA_MEDIANA_MANGOS.zpl.json
static/: app.js  config.js  connections.js  fields-editor.js  icon.icns  label-wizard.js  network.js  print-tabs.js  profiles.js  styles.css  template-source.js  theme.js  tools.js  updater.js  versions.js  wizard.js
static/css/: style.css
static/js/: app.js
templates/: _printer_builder.html  _settings_tabs.html  base.html  config_connections.html  config_hub.html  config_network.html  config_printers.html  config_profiles.html  config_templates.html  config_tools.html  dashboard.html  form.html  history.html  index.html  nav.html  template_fields.html  template_map.html  template_new.html  template_source.html  template_wizard.html  wizard.html
templates/cache/: edit.html  list.html
templates/profiles/: edit.html  list.html
templates/zpl_templates/: edit.html  list.html
tests/: test_app.py  test_cache.py  test_pick_template.py  test_printer.py  test_profiles.py  test_zpl_templates.py
zebra/: __init__.py  cache_scheduler.py  constants.py  db.py  discovery.py  fields.py  firewall.py  i18n.py  lookup_cache.py  network.py  preview.py  printer.py  printer_tools.py  profiles.py  recipes.py  settings.py  template_history.py  updater.py  zpl.py  zpl_parser.py
zebra/datasources/: __init__.py  base.py  mssql.py  registry.py
zebra/routes/: __init__.py  _dev.py  config.py  labels.py  network.py  tmpl.py
